bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:3: error: ';' expected but integer literal found.
  if ((Math.abs(100 - n) <= 10) || (Math.abs(200 - n))) <= 10){
                                                           ^